# docrepox

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE-NOTES.md  docker-compose.prod.yml  docker-compose.yml  env.dev.example  env.example  env.prod.db.example  env.prod.example  pyproject.toml  requirements.txt  setup.sh
docrepo/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  global_settings-example.py  requirements.txt
docrepo/apps/avatars/: apps.py  models.py  urls.py  views.py
docrepo/apps/bookmarks/: admin.py  models.py  urls.py  utils.py  views.py
docrepo/apps/clipboard/: apps.py  models.py  services.py  settings.py  signals.py  tests.py  urls.py  views.py
docrepo/apps/comments/: models.py  tests.py  urls.py  utils.py  views.py
docrepo/apps/comms/: admin.py  apps.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
docrepo/apps/core/: middleware.py  models.py  tests.py  views.py
docrepo/apps/dashlets/: admin.py  apps.py  forms.py  models.py  views.py
docrepo/apps/ddocs/: apps.py  settings.py  urls.py
docrepo/apps/encrypted_content/: apps.py  settings.py  storage.py  utils.py
docrepo/apps/etags/: admin.py  apps.py  models.py  widgets.py  (+1 more)
docrepo/config/: asgi.py  urls.py  wsgi.py
docrepo/extensions/: settings.py
docrepo/staticfiles/: LICENSE.txt
keycloak/: documendous-realm.json
nginx/: nginx.conf
sphinx/: conf.py  index.rst
tailwind/: package-lock.json  package.json  sync-unfold.sh  tailwind-doc.config.js  tailwind.config.js
tailwind/docrepo/: custom.css
tailwind/unfold/: custom.css
(+410 files in other folders)
