[tool.poetry]
name = "docrepox"
version = "0.1.0"
description = "An enterprise content management system built with Python and Django"
authors = ["Documendous LLC <documendous@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.17"
psycopg2-binary = "^2.9.9"
gunicorn = "22.0.0"
django-environ = "^0.11.2"
django-widget-tweaks = "^1.5.0"
idna = "3.7"
sqlparse = "0.5.0"
django-unfold = "^0.22.0"
django-minio-storage = "^0.5.7"
requests = "2.32.0"
pillow = "^10.3.0"
certifi = "2024.7.4"
urllib3 = "2.2.2"
django-tz-detect = "^0.5.0"
cryptography = "43.0.1"
elasticsearch-dsl = "^8.15.3"
django-elasticsearch-dsl = "^8.0"
mozilla-django-oidc = "^4.0.1"
sphinx = "^8.1.3"
sphinx-autoapi = "^3.3.3"
sphinx-rtd-theme = "^3.0.1"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pip-audit = "^2.7.2"
pip-tools = "^7.4.1"
flake8 = "^7.0.0"
coverage = "^7.4.4"
mypy = "1.9.0"
pre-commit = "^3.7.0"
django-debug-toolbar = "^4.4.6"
markdown = "^3.6"
types-markdown = "^3.6.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
